<resources>
    <string name="app_name">My Application</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="userName">User name</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="required_field">Required field!</string>
    <string name="success">Success!</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="remove_message">Client removed!</string>
    <string name="confirm_progress">Are you sure?</string>
    <string name="title_confirm">Confirm</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cep">CEP</string>
    <string name="find">Find</string>
    <string name="street">Street</string>
    <string name="street_name">Street Name</string>
    <string name="neighborhood">Neighborhood</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="loading">Loading...</string>
    <string name="share">Share</string>
    <string name="invalidLogin">Wrong username or password!</string>
    <string name="genre">Genre</string>
    <string name="debtor">Debtor?</string>
</resources>
